# instantclassicmfg

./: .gitignore  404.html  CNAME  config.yaml  index.html  index.xml  pyproject.toml  robots.txt  sitemap.xml
.github/workflows/: deploy.yml
categories/: index.html  index.xml
categories/mix-tapes/: index.html  index.xml
config/_default/: _languages.toml  config.toml  params.toml  related.toml
content/: _index.md
content/mix-tapes/: _content.gotmpl  _index.md
data/: mix_tapes.yaml
layouts/mix-tapes/: single.html
layouts/partials/: extend_footer.html
mix-tapes/: index.html  index.xml
mix-tapes/blast-off...-decidedly-more-calm/: index.html
mix-tapes/blues-#11-7-85/: index.html
mix-tapes/blues-4-2000/: index.html
mix-tapes/country-western-#12/: index.html
mix-tapes/country-western-8-92/: index.html
mix-tapes/memorex-bonnie-raitt/: index.html
mix-tapes/miscellaneous-#145-3-88/: index.html
mix-tapes/miscellaneous-#146-6-22-88/: index.html
mix-tapes/miscellaneous-#196/: index.html
mix-tapes/miscellaneous-1979/: index.html
mix-tapes/miscellaneous-no.-196/: index.html
mix-tapes/quiet-jazz-4-82-revised-10-82/: index.html
mix-tapes/redone-originals-#3/: index.html
mix-tapes/redone-originals-#5/: index.html
mix-tapes/redone-originals-no.-5/: index.html
mix-tapes/van-morrison/: index.html
page/1/: index.html
page/2/: index.html
src/icm/: cli.py  mix_tapes.py  spotify.py
tags/: index.html  index.xml
tags/1970s/: index.html  index.xml
tags/1980s/: index.html  index.xml
tags/1990s/: index.html  index.xml
(+38 files in other folders)
